sintatico.output
Grammar

    0 $accept: programa $end

    1 $@1: ε

    2 $@2: ε

    3 programa: cabecalho $@1 variaveis $@2 T_INICIO lista_comandos T_FIM

    4 cabecalho: T_PROGRAMA T_IDENTIF

    5 variaveis: ε
    6          | declaracao_variaveis

    7 declaracao_variaveis: tipo lista_variaveis declaracao_variaveis
    8                     | tipo lista_variaveis

    9 tipo: T_LOGICO
   10     | T_INTEIRO

   11 lista_variaveis: T_IDENTIF lista_variaveis
   12                | T_IDENTIF

   13 lista_comandos: ε
   14               | comando lista_comandos

   15 comando: leitura
   16        | escrita
   17        | repeticao
   18        | selecao
   19        | atribuicao

   20 leitura: T_LEIA T_IDENTIF

   21 escrita: T_ESCREVA expressao

   22 $@3: ε

   23 $@4: ε

   24 repeticao: T_ENQT $@3 expressao T_FACA $@4 lista_comandos T_FIMENQT

   25 $@5: ε

   26 $@6: ε

   27 selecao: T_SE expressao T_ENTAO $@5 lista_comandos T_SENAO $@6 lista_comandos T_FIMSE

   28 atribuicao: T_IDENTIF T_ATRIB expressao

   29 expressao: expressao T_VEZES expressao
   30          | expressao T_DIV expressao
   31          | expressao T_MENOS expressao
   32          | expressao T_MAIS expressao
   33          | expressao T_MAIOR expressao
   34          | expressao T_MENOR expressao
   35          | expressao T_IGUAL expressao
   36          | expressao T_E expressao
   37          | expressao T_OU expressao
   38          | termo

   39 termo: T_IDENTIF
   40      | T_NUMERO
   41      | T_V
   42      | T_F
   43      | T_NAO termo
   44      | T_ABRE expressao T_FECHA


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    T_PROGRAMA (258) 4
    T_INICIO (259) 3
    T_FIM (260) 3
    T_IDENTIF (261) 4 11 12 20 28 39
    T_LEIA (262) 20
    T_ESCREVA (263) 21
    T_ENQT (264) 24
    T_FACA (265) 24
    T_FIMENQT (266) 24
    T_SE (267) 27
    T_ENTAO (268) 27
    T_SENAO (269) 27
    T_FIMSE (270) 27
    T_ATRIB (271) 28
    T_VEZES (272) 29
    T_DIV (273) 30
    T_MAIS (274) 32
    T_MENOS (275) 31
    T_MAIOR (276) 33
    T_MENOR (277) 34
    T_IGUAL (278) 35
    T_OU (279) 37
    T_E (280) 36
    T_V (281) 41
    T_F (282) 42
    T_ABRE (283) 44
    T_FECHA (284) 44
    T_LOGICO (285) 9
    T_INTEIRO (286) 10
    T_NUMERO (287) 40
    T_NAO (288) 43


Nonterminals, with rules where they appear

    $accept (34)
        on left: 0
    programa (35)
        on left: 3
        on right: 0
    $@1 (36)
        on left: 1
        on right: 3
    $@2 (37)
        on left: 2
        on right: 3
    cabecalho (38)
        on left: 4
        on right: 3
    variaveis (39)
        on left: 5 6
        on right: 3
    declaracao_variaveis (40)
        on left: 7 8
        on right: 6 7
    tipo (41)
        on left: 9 10
        on right: 7 8
    lista_variaveis (42)
        on left: 11 12
        on right: 7 8 11
    lista_comandos (43)
        on left: 13 14
        on right: 3 14 24 27
    comando (44)
        on left: 15 16 17 18 19
        on right: 14
    leitura (45)
        on left: 20
        on right: 15
    escrita (46)
        on left: 21
        on right: 16
    repeticao (47)
        on left: 24
        on right: 17
    $@3 (48)
        on left: 22
        on right: 24
    $@4 (49)
        on left: 23
        on right: 24
    selecao (50)
        on left: 27
        on right: 18
    $@5 (51)
        on left: 25
        on right: 27
    $@6 (52)
        on left: 26
        on right: 27
    atribuicao (53)
        on left: 28
        on right: 19
    expressao (54)
        on left: 29 30 31 32 33 34 35 36 37 38
        on right: 21 24 27 28 29 30 31 32 33 34 35 36 37 44
    termo (55)
        on left: 39 40 41 42 43 44
        on right: 38 43


State 0

    0 $accept: • programa $end

    T_PROGRAMA  shift, and go to state 1

    programa   go to state 2
    cabecalho  go to state 3


State 1

    4 cabecalho: T_PROGRAMA • T_IDENTIF

    T_IDENTIF  shift, and go to state 4


State 2

    0 $accept: programa • $end

    $end  shift, and go to state 5


State 3

    3 programa: cabecalho • $@1 variaveis $@2 T_INICIO lista_comandos T_FIM

    $default  reduce using rule 1 ($@1)

    $@1  go to state 6


State 4

    4 cabecalho: T_PROGRAMA T_IDENTIF •

    $default  reduce using rule 4 (cabecalho)


State 5

    0 $accept: programa $end •

    $default  accept


State 6

    3 programa: cabecalho $@1 • variaveis $@2 T_INICIO lista_comandos T_FIM

    T_LOGICO   shift, and go to state 7
    T_INTEIRO  shift, and go to state 8

    $default  reduce using rule 5 (variaveis)

    variaveis             go to state 9
    declaracao_variaveis  go to state 10
    tipo                  go to state 11


State 7

    9 tipo: T_LOGICO •

    $default  reduce using rule 9 (tipo)


State 8

   10 tipo: T_INTEIRO •

    $default  reduce using rule 10 (tipo)


State 9

    3 programa: cabecalho $@1 variaveis • $@2 T_INICIO lista_comandos T_FIM

    $default  reduce using rule 2 ($@2)

    $@2  go to state 12


State 10

    6 variaveis: declaracao_variaveis •

    $default  reduce using rule 6 (variaveis)


State 11

    7 declaracao_variaveis: tipo • lista_variaveis declaracao_variaveis
    8                     | tipo • lista_variaveis

    T_IDENTIF  shift, and go to state 13

    lista_variaveis  go to state 14


State 12

    3 programa: cabecalho $@1 variaveis $@2 • T_INICIO lista_comandos T_FIM

    T_INICIO  shift, and go to state 15


State 13

   11 lista_variaveis: T_IDENTIF • lista_variaveis
   12                | T_IDENTIF •

    T_IDENTIF  shift, and go to state 13

    $default  reduce using rule 12 (lista_variaveis)

    lista_variaveis  go to state 16


State 14

    7 declaracao_variaveis: tipo lista_variaveis • declaracao_variaveis
    8                     | tipo lista_variaveis •

    T_LOGICO   shift, and go to state 7
    T_INTEIRO  shift, and go to state 8

    $default  reduce using rule 8 (declaracao_variaveis)

    declaracao_variaveis  go to state 17
    tipo                  go to state 11


State 15

    3 programa: cabecalho $@1 variaveis $@2 T_INICIO • lista_comandos T_FIM

    T_IDENTIF  shift, and go to state 18
    T_LEIA     shift, and go to state 19
    T_ESCREVA  shift, and go to state 20
    T_ENQT     shift, and go to state 21
    T_SE       shift, and go to state 22

    $default  reduce using rule 13 (lista_comandos)

    lista_comandos  go to state 23
    comando         go to state 24
    leitura         go to state 25
    escrita         go to state 26
    repeticao       go to state 27
    selecao         go to state 28
    atribuicao      go to state 29


State 16

   11 lista_variaveis: T_IDENTIF lista_variaveis •

    $default  reduce using rule 11 (lista_variaveis)


State 17

    7 declaracao_variaveis: tipo lista_variaveis declaracao_variaveis •

    $default  reduce using rule 7 (declaracao_variaveis)


State 18

   28 atribuicao: T_IDENTIF • T_ATRIB expressao

    T_ATRIB  shift, and go to state 30


State 19

   20 leitura: T_LEIA • T_IDENTIF

    T_IDENTIF  shift, and go to state 31


State 20

   21 escrita: T_ESCREVA • expressao

    T_IDENTIF  shift, and go to state 32
    T_V        shift, and go to state 33
    T_F        shift, and go to state 34
    T_ABRE     shift, and go to state 35
    T_NUMERO   shift, and go to state 36
    T_NAO      shift, and go to state 37

    expressao  go to state 38
    termo      go to state 39


State 21

   24 repeticao: T_ENQT • $@3 expressao T_FACA $@4 lista_comandos T_FIMENQT

    $default  reduce using rule 22 ($@3)

    $@3  go to state 40


State 22

   27 selecao: T_SE • expressao T_ENTAO $@5 lista_comandos T_SENAO $@6 lista_comandos T_FIMSE

    T_IDENTIF  shift, and go to state 32
    T_V        shift, and go to state 33
    T_F        shift, and go to state 34
    T_ABRE     shift, and go to state 35
    T_NUMERO   shift, and go to state 36
    T_NAO      shift, and go to state 37

    expressao  go to state 41
    termo      go to state 39


State 23

    3 programa: cabecalho $@1 variaveis $@2 T_INICIO lista_comandos • T_FIM

    T_FIM  shift, and go to state 42


State 24

   14 lista_comandos: comando • lista_comandos

    T_IDENTIF  shift, and go to state 18
    T_LEIA     shift, and go to state 19
    T_ESCREVA  shift, and go to state 20
    T_ENQT     shift, and go to state 21
    T_SE       shift, and go to state 22

    $default  reduce using rule 13 (lista_comandos)

    lista_comandos  go to state 43
    comando         go to state 24
    leitura         go to state 25
    escrita         go to state 26
    repeticao       go to state 27
    selecao         go to state 28
    atribuicao      go to state 29


State 25

   15 comando: leitura •

    $default  reduce using rule 15 (comando)


State 26

   16 comando: escrita •

    $default  reduce using rule 16 (comando)


State 27

   17 comando: repeticao •

    $default  reduce using rule 17 (comando)


State 28

   18 comando: selecao •

    $default  reduce using rule 18 (comando)


State 29

   19 comando: atribuicao •

    $default  reduce using rule 19 (comando)


State 30

   28 atribuicao: T_IDENTIF T_ATRIB • expressao

    T_IDENTIF  shift, and go to state 32
    T_V        shift, and go to state 33
    T_F        shift, and go to state 34
    T_ABRE     shift, and go to state 35
    T_NUMERO   shift, and go to state 36
    T_NAO      shift, and go to state 37

    expressao  go to state 44
    termo      go to state 39


State 31

   20 leitura: T_LEIA T_IDENTIF •

    $default  reduce using rule 20 (leitura)


State 32

   39 termo: T_IDENTIF •

    $default  reduce using rule 39 (termo)


State 33

   41 termo: T_V •

    $default  reduce using rule 41 (termo)


State 34

   42 termo: T_F •

    $default  reduce using rule 42 (termo)


State 35

   44 termo: T_ABRE • expressao T_FECHA

    T_IDENTIF  shift, and go to state 32
    T_V        shift, and go to state 33
    T_F        shift, and go to state 34
    T_ABRE     shift, and go to state 35
    T_NUMERO   shift, and go to state 36
    T_NAO      shift, and go to state 37

    expressao  go to state 45
    termo      go to state 39


State 36

   40 termo: T_NUMERO •

    $default  reduce using rule 40 (termo)


State 37

   43 termo: T_NAO • termo

    T_IDENTIF  shift, and go to state 32
    T_V        shift, and go to state 33
    T_F        shift, and go to state 34
    T_ABRE     shift, and go to state 35
    T_NUMERO   shift, and go to state 36
    T_NAO      shift, and go to state 37

    termo  go to state 46


State 38

   21 escrita: T_ESCREVA expressao •
   29 expressao: expressao • T_VEZES expressao
   30          | expressao • T_DIV expressao
   31          | expressao • T_MENOS expressao
   32          | expressao • T_MAIS expressao
   33          | expressao • T_MAIOR expressao
   34          | expressao • T_MENOR expressao
   35          | expressao • T_IGUAL expressao
   36          | expressao • T_E expressao
   37          | expressao • T_OU expressao

    T_VEZES  shift, and go to state 47
    T_DIV    shift, and go to state 48
    T_MAIS   shift, and go to state 49
    T_MENOS  shift, and go to state 50
    T_MAIOR  shift, and go to state 51
    T_MENOR  shift, and go to state 52
    T_IGUAL  shift, and go to state 53
    T_OU     shift, and go to state 54
    T_E      shift, and go to state 55

    $default  reduce using rule 21 (escrita)


State 39

   38 expressao: termo •

    $default  reduce using rule 38 (expressao)


State 40

   24 repeticao: T_ENQT $@3 • expressao T_FACA $@4 lista_comandos T_FIMENQT

    T_IDENTIF  shift, and go to state 32
    T_V        shift, and go to state 33
    T_F        shift, and go to state 34
    T_ABRE     shift, and go to state 35
    T_NUMERO   shift, and go to state 36
    T_NAO      shift, and go to state 37

    expressao  go to state 56
    termo      go to state 39


State 41

   27 selecao: T_SE expressao • T_ENTAO $@5 lista_comandos T_SENAO $@6 lista_comandos T_FIMSE
   29 expressao: expressao • T_VEZES expressao
   30          | expressao • T_DIV expressao
   31          | expressao • T_MENOS expressao
   32          | expressao • T_MAIS expressao
   33          | expressao • T_MAIOR expressao
   34          | expressao • T_MENOR expressao
   35          | expressao • T_IGUAL expressao
   36          | expressao • T_E expressao
   37          | expressao • T_OU expressao

    T_ENTAO  shift, and go to state 57
    T_VEZES  shift, and go to state 47
    T_DIV    shift, and go to state 48
    T_MAIS   shift, and go to state 49
    T_MENOS  shift, and go to state 50
    T_MAIOR  shift, and go to state 51
    T_MENOR  shift, and go to state 52
    T_IGUAL  shift, and go to state 53
    T_OU     shift, and go to state 54
    T_E      shift, and go to state 55


State 42

    3 programa: cabecalho $@1 variaveis $@2 T_INICIO lista_comandos T_FIM •

    $default  reduce using rule 3 (programa)


State 43

   14 lista_comandos: comando lista_comandos •

    $default  reduce using rule 14 (lista_comandos)


State 44

   28 atribuicao: T_IDENTIF T_ATRIB expressao •
   29 expressao: expressao • T_VEZES expressao
   30          | expressao • T_DIV expressao
   31          | expressao • T_MENOS expressao
   32          | expressao • T_MAIS expressao
   33          | expressao • T_MAIOR expressao
   34          | expressao • T_MENOR expressao
   35          | expressao • T_IGUAL expressao
   36          | expressao • T_E expressao
   37          | expressao • T_OU expressao

    T_VEZES  shift, and go to state 47
    T_DIV    shift, and go to state 48
    T_MAIS   shift, and go to state 49
    T_MENOS  shift, and go to state 50
    T_MAIOR  shift, and go to state 51
    T_MENOR  shift, and go to state 52
    T_IGUAL  shift, and go to state 53
    T_OU     shift, and go to state 54
    T_E      shift, and go to state 55

    $default  reduce using rule 28 (atribuicao)


State 45

   29 expressao: expressao • T_VEZES expressao
   30          | expressao • T_DIV expressao
   31          | expressao • T_MENOS expressao
   32          | expressao • T_MAIS expressao
   33          | expressao • T_MAIOR expressao
   34          | expressao • T_MENOR expressao
   35          | expressao • T_IGUAL expressao
   36          | expressao • T_E expressao
   37          | expressao • T_OU expressao
   44 termo: T_ABRE expressao • T_FECHA

    T_VEZES  shift, and go to state 47
    T_DIV    shift, and go to state 48
    T_MAIS   shift, and go to state 49
    T_MENOS  shift, and go to state 50
    T_MAIOR  shift, and go to state 51
    T_MENOR  shift, and go to state 52
    T_IGUAL  shift, and go to state 53
    T_OU     shift, and go to state 54
    T_E      shift, and go to state 55
    T_FECHA  shift, and go to state 58


State 46

   43 termo: T_NAO termo •

    $default  reduce using rule 43 (termo)


State 47

   29 expressao: expressao T_VEZES • expressao

    T_IDENTIF  shift, and go to state 32
    T_V        shift, and go to state 33
    T_F        shift, and go to state 34
    T_ABRE     shift, and go to state 35
    T_NUMERO   shift, and go to state 36
    T_NAO      shift, and go to state 37

    expressao  go to state 59
    termo      go to state 39


State 48

   30 expressao: expressao T_DIV • expressao

    T_IDENTIF  shift, and go to state 32
    T_V        shift, and go to state 33
    T_F        shift, and go to state 34
    T_ABRE     shift, and go to state 35
    T_NUMERO   shift, and go to state 36
    T_NAO      shift, and go to state 37

    expressao  go to state 60
    termo      go to state 39


State 49

   32 expressao: expressao T_MAIS • expressao

    T_IDENTIF  shift, and go to state 32
    T_V        shift, and go to state 33
    T_F        shift, and go to state 34
    T_ABRE     shift, and go to state 35
    T_NUMERO   shift, and go to state 36
    T_NAO      shift, and go to state 37

    expressao  go to state 61
    termo      go to state 39


State 50

   31 expressao: expressao T_MENOS • expressao

    T_IDENTIF  shift, and go to state 32
    T_V        shift, and go to state 33
    T_F        shift, and go to state 34
    T_ABRE     shift, and go to state 35
    T_NUMERO   shift, and go to state 36
    T_NAO      shift, and go to state 37

    expressao  go to state 62
    termo      go to state 39


State 51

   33 expressao: expressao T_MAIOR • expressao

    T_IDENTIF  shift, and go to state 32
    T_V        shift, and go to state 33
    T_F        shift, and go to state 34
    T_ABRE     shift, and go to state 35
    T_NUMERO   shift, and go to state 36
    T_NAO      shift, and go to state 37

    expressao  go to state 63
    termo      go to state 39


State 52

   34 expressao: expressao T_MENOR • expressao

    T_IDENTIF  shift, and go to state 32
    T_V        shift, and go to state 33
    T_F        shift, and go to state 34
    T_ABRE     shift, and go to state 35
    T_NUMERO   shift, and go to state 36
    T_NAO      shift, and go to state 37

    expressao  go to state 64
    termo      go to state 39


State 53

   35 expressao: expressao T_IGUAL • expressao

    T_IDENTIF  shift, and go to state 32
    T_V        shift, and go to state 33
    T_F        shift, and go to state 34
    T_ABRE     shift, and go to state 35
    T_NUMERO   shift, and go to state 36
    T_NAO      shift, and go to state 37

    expressao  go to state 65
    termo      go to state 39


State 54

   37 expressao: expressao T_OU • expressao

    T_IDENTIF  shift, and go to state 32
    T_V        shift, and go to state 33
    T_F        shift, and go to state 34
    T_ABRE     shift, and go to state 35
    T_NUMERO   shift, and go to state 36
    T_NAO      shift, and go to state 37

    expressao  go to state 66
    termo      go to state 39


State 55

   36 expressao: expressao T_E • expressao

    T_IDENTIF  shift, and go to state 32
    T_V        shift, and go to state 33
    T_F        shift, and go to state 34
    T_ABRE     shift, and go to state 35
    T_NUMERO   shift, and go to state 36
    T_NAO      shift, and go to state 37

    expressao  go to state 67
    termo      go to state 39


State 56

   24 repeticao: T_ENQT $@3 expressao • T_FACA $@4 lista_comandos T_FIMENQT
   29 expressao: expressao • T_VEZES expressao
   30          | expressao • T_DIV expressao
   31          | expressao • T_MENOS expressao
   32          | expressao • T_MAIS expressao
   33          | expressao • T_MAIOR expressao
   34          | expressao • T_MENOR expressao
   35          | expressao • T_IGUAL expressao
   36          | expressao • T_E expressao
   37          | expressao • T_OU expressao

    T_FACA   shift, and go to state 68
    T_VEZES  shift, and go to state 47
    T_DIV    shift, and go to state 48
    T_MAIS   shift, and go to state 49
    T_MENOS  shift, and go to state 50
    T_MAIOR  shift, and go to state 51
    T_MENOR  shift, and go to state 52
    T_IGUAL  shift, and go to state 53
    T_OU     shift, and go to state 54
    T_E      shift, and go to state 55


State 57

   27 selecao: T_SE expressao T_ENTAO • $@5 lista_comandos T_SENAO $@6 lista_comandos T_FIMSE

    $default  reduce using rule 25 ($@5)

    $@5  go to state 69


State 58

   44 termo: T_ABRE expressao T_FECHA •

    $default  reduce using rule 44 (termo)


State 59

   29 expressao: expressao • T_VEZES expressao
   29          | expressao T_VEZES expressao •
   30          | expressao • T_DIV expressao
   31          | expressao • T_MENOS expressao
   32          | expressao • T_MAIS expressao
   33          | expressao • T_MAIOR expressao
   34          | expressao • T_MENOR expressao
   35          | expressao • T_IGUAL expressao
   36          | expressao • T_E expressao
   37          | expressao • T_OU expressao

    $default  reduce using rule 29 (expressao)


State 60

   29 expressao: expressao • T_VEZES expressao
   30          | expressao • T_DIV expressao
   30          | expressao T_DIV expressao •
   31          | expressao • T_MENOS expressao
   32          | expressao • T_MAIS expressao
   33          | expressao • T_MAIOR expressao
   34          | expressao • T_MENOR expressao
   35          | expressao • T_IGUAL expressao
   36          | expressao • T_E expressao
   37          | expressao • T_OU expressao

    $default  reduce using rule 30 (expressao)


State 61

   29 expressao: expressao • T_VEZES expressao
   30          | expressao • T_DIV expressao
   31          | expressao • T_MENOS expressao
   32          | expressao • T_MAIS expressao
   32          | expressao T_MAIS expressao •
   33          | expressao • T_MAIOR expressao
   34          | expressao • T_MENOR expressao
   35          | expressao • T_IGUAL expressao
   36          | expressao • T_E expressao
   37          | expressao • T_OU expressao

    T_VEZES  shift, and go to state 47
    T_DIV    shift, and go to state 48

    $default  reduce using rule 32 (expressao)


State 62

   29 expressao: expressao • T_VEZES expressao
   30          | expressao • T_DIV expressao
   31          | expressao • T_MENOS expressao
   31          | expressao T_MENOS expressao •
   32          | expressao • T_MAIS expressao
   33          | expressao • T_MAIOR expressao
   34          | expressao • T_MENOR expressao
   35          | expressao • T_IGUAL expressao
   36          | expressao • T_E expressao
   37          | expressao • T_OU expressao

    T_VEZES  shift, and go to state 47
    T_DIV    shift, and go to state 48

    $default  reduce using rule 31 (expressao)


State 63

   29 expressao: expressao • T_VEZES expressao
   30          | expressao • T_DIV expressao
   31          | expressao • T_MENOS expressao
   32          | expressao • T_MAIS expressao
   33          | expressao • T_MAIOR expressao
   33          | expressao T_MAIOR expressao •
   34          | expressao • T_MENOR expressao
   35          | expressao • T_IGUAL expressao
   36          | expressao • T_E expressao
   37          | expressao • T_OU expressao

    T_VEZES  shift, and go to state 47
    T_DIV    shift, and go to state 48
    T_MAIS   shift, and go to state 49
    T_MENOS  shift, and go to state 50

    $default  reduce using rule 33 (expressao)


State 64

   29 expressao: expressao • T_VEZES expressao
   30          | expressao • T_DIV expressao
   31          | expressao • T_MENOS expressao
   32          | expressao • T_MAIS expressao
   33          | expressao • T_MAIOR expressao
   34          | expressao • T_MENOR expressao
   34          | expressao T_MENOR expressao •
   35          | expressao • T_IGUAL expressao
   36          | expressao • T_E expressao
   37          | expressao • T_OU expressao

    T_VEZES  shift, and go to state 47
    T_DIV    shift, and go to state 48
    T_MAIS   shift, and go to state 49
    T_MENOS  shift, and go to state 50

    $default  reduce using rule 34 (expressao)


State 65

   29 expressao: expressao • T_VEZES expressao
   30          | expressao • T_DIV expressao
   31          | expressao • T_MENOS expressao
   32          | expressao • T_MAIS expressao
   33          | expressao • T_MAIOR expressao
   34          | expressao • T_MENOR expressao
   35          | expressao • T_IGUAL expressao
   35          | expressao T_IGUAL expressao •
   36          | expressao • T_E expressao
   37          | expressao • T_OU expressao

    T_VEZES  shift, and go to state 47
    T_DIV    shift, and go to state 48
    T_MAIS   shift, and go to state 49
    T_MENOS  shift, and go to state 50
    T_MAIOR  shift, and go to state 51
    T_MENOR  shift, and go to state 52

    $default  reduce using rule 35 (expressao)


State 66

   29 expressao: expressao • T_VEZES expressao
   30          | expressao • T_DIV expressao
   31          | expressao • T_MENOS expressao
   32          | expressao • T_MAIS expressao
   33          | expressao • T_MAIOR expressao
   34          | expressao • T_MENOR expressao
   35          | expressao • T_IGUAL expressao
   36          | expressao • T_E expressao
   37          | expressao • T_OU expressao
   37          | expressao T_OU expressao •

    T_VEZES  shift, and go to state 47
    T_DIV    shift, and go to state 48
    T_MAIS   shift, and go to state 49
    T_MENOS  shift, and go to state 50
    T_MAIOR  shift, and go to state 51
    T_MENOR  shift, and go to state 52
    T_IGUAL  shift, and go to state 53

    $default  reduce using rule 37 (expressao)


State 67

   29 expressao: expressao • T_VEZES expressao
   30          | expressao • T_DIV expressao
   31          | expressao • T_MENOS expressao
   32          | expressao • T_MAIS expressao
   33          | expressao • T_MAIOR expressao
   34          | expressao • T_MENOR expressao
   35          | expressao • T_IGUAL expressao
   36          | expressao • T_E expressao
   36          | expressao T_E expressao •
   37          | expressao • T_OU expressao

    T_VEZES  shift, and go to state 47
    T_DIV    shift, and go to state 48
    T_MAIS   shift, and go to state 49
    T_MENOS  shift, and go to state 50
    T_MAIOR  shift, and go to state 51
    T_MENOR  shift, and go to state 52
    T_IGUAL  shift, and go to state 53

    $default  reduce using rule 36 (expressao)


State 68

   24 repeticao: T_ENQT $@3 expressao T_FACA • $@4 lista_comandos T_FIMENQT

    $default  reduce using rule 23 ($@4)

    $@4  go to state 70


State 69

   27 selecao: T_SE expressao T_ENTAO $@5 • lista_comandos T_SENAO $@6 lista_comandos T_FIMSE

    T_IDENTIF  shift, and go to state 18
    T_LEIA     shift, and go to state 19
    T_ESCREVA  shift, and go to state 20
    T_ENQT     shift, and go to state 21
    T_SE       shift, and go to state 22

    $default  reduce using rule 13 (lista_comandos)

    lista_comandos  go to state 71
    comando         go to state 24
    leitura         go to state 25
    escrita         go to state 26
    repeticao       go to state 27
    selecao         go to state 28
    atribuicao      go to state 29


State 70

   24 repeticao: T_ENQT $@3 expressao T_FACA $@4 • lista_comandos T_FIMENQT

    T_IDENTIF  shift, and go to state 18
    T_LEIA     shift, and go to state 19
    T_ESCREVA  shift, and go to state 20
    T_ENQT     shift, and go to state 21
    T_SE       shift, and go to state 22

    $default  reduce using rule 13 (lista_comandos)

    lista_comandos  go to state 72
    comando         go to state 24
    leitura         go to state 25
    escrita         go to state 26
    repeticao       go to state 27
    selecao         go to state 28
    atribuicao      go to state 29


State 71

   27 selecao: T_SE expressao T_ENTAO $@5 lista_comandos • T_SENAO $@6 lista_comandos T_FIMSE

    T_SENAO  shift, and go to state 73


State 72

   24 repeticao: T_ENQT $@3 expressao T_FACA $@4 lista_comandos • T_FIMENQT

    T_FIMENQT  shift, and go to state 74


State 73

   27 selecao: T_SE expressao T_ENTAO $@5 lista_comandos T_SENAO • $@6 lista_comandos T_FIMSE

    $default  reduce using rule 26 ($@6)

    $@6  go to state 75


State 74

   24 repeticao: T_ENQT $@3 expressao T_FACA $@4 lista_comandos T_FIMENQT •

    $default  reduce using rule 24 (repeticao)


State 75

   27 selecao: T_SE expressao T_ENTAO $@5 lista_comandos T_SENAO $@6 • lista_comandos T_FIMSE

    T_IDENTIF  shift, and go to state 18
    T_LEIA     shift, and go to state 19
    T_ESCREVA  shift, and go to state 20
    T_ENQT     shift, and go to state 21
    T_SE       shift, and go to state 22

    $default  reduce using rule 13 (lista_comandos)

    lista_comandos  go to state 76
    comando         go to state 24
    leitura         go to state 25
    escrita         go to state 26
    repeticao       go to state 27
    selecao         go to state 28
    atribuicao      go to state 29


State 76

   27 selecao: T_SE expressao T_ENTAO $@5 lista_comandos T_SENAO $@6 lista_comandos • T_FIMSE

    T_FIMSE  shift, and go to state 77


State 77

   27 selecao: T_SE expressao T_ENTAO $@5 lista_comandos T_SENAO $@6 lista_comandos T_FIMSE •

    $default  reduce using rule 27 (selecao)
